# Project-WG

./: .gitignore  3RD_PARTIES  CMakeLists.txt  Cargo.toml  LICENSE  LICENSE-CC-BY-NC-SA  LICENSE-CC-NC-BY-SA  LICENSE-MIO-PHOENIX  README.adoc  config.ini  config.toml  main.cc
.github/workflows/: codeql-analysis.yml
WGAnimation/: CMakeLists.txt
WGAnimation/include/: lib.h
WGAnimation/include/cwglx/: GL.h
WGAnimation/playground/: PlaygroundWidget.cc  PlaygroundWidget.h  main.cc
WGAnimation/src/: lib.cc
alchemy/: dlib_sp_68points.readme.txt
animations/body/: 0-static.anim  0-static.bis  0-static.scm  1-punch.anim  2-two-punches.anim  3-spacium.bis  4-zeperion.anim  punch.anim  spaccium.anim
bis_anim/: CMakeLists.txt  Cargo.toml
bis_anim/include/: bis_anim.h
bis_anim/src/: ctx.rs  placeholder.cc
blobs/designs/: README.adoc  设计方案B.psd
extra/animations/: TrivialAnimation.cc
extra/animations/Taunter/: Taunter.cc
extra/animations/TypeWriter/: TypeWriter.cc  TypeWriterControl.cc  TypeWriterControl.h  test.cc
extra/attachments/: Emitter.cc  TrivialAttachment.cc
extra/attachments/Emitter/: Emitter.cc  emitter-power-source.mesh  emitter-side-cover.mesh  emitter.mesh  emitter.qrc
extra/bis_anim/src/: ctx.rs  lib.rs
extra/config/: Config.rc  config-icon.qrc  main.cc
extra/dsys/: bin_rw.py  build.sh  cain_and_abel.py  compdec.py  main.py  metadata.py  requirements.txt  tckdcmprs.py  test_compdec.py  train.py  ui.py  util.py  version.txt  worker.py
extra/utility/phong/: PaintWidget.cc  PaintWidget.h  PhongTester.cc  TesterWidget.cc  TesterWidget.h
include/: GlobalConfig.h  Version.h
include/cement/: Cement.h
include/cwglx/: Color.h  DefaultMaterials.inc  Defs.h  Drawable.h  DrawableArena.h  GL.h  GLImpl.h  GLInfo.h  Light.h  Material.h  MeshLoader.h  RawMatrix.h  Setup.h  Texture.h  Vertex.h
include/cwglx/Base/: ElementBufferObject.h  Shader.h  ShaderProgram.h  Texture.h  VertexArrayObject.h  VertexBufferObject.h  VertexBufferObjectImpl.h
include/cwglx/GL/: GL.h  GLImpl.h  GLInfo.h
include/cwglx/Object/: Material.h  Object.h  Vertex.h  WavefrontLoader.h
include/cwglx/drawable/: Composition.h  Fan.h  FineRectGen.h  FineTriangleGen.h  PlainLineMesh.h  PlainMesh.h  PlainTriangles.h  Rectangle.h  Triangle.h  TriangleGen.h  TriangleGenerator.h
include/glu/: FakeGLU.h
include/pl2/: pl2q.h
include/pose/: DlibPoser.h  Pose.h
include/ui/: Animation.h  BodyStatus.h  CameraEntityStatus.h  CaptureWidget.h  ConfigWidget.h  EntityStatus.h  FaceTrackStatus.h  GLWidget.h  ManualOperateWidget.h  MessageBoxAlter.h  OSFTrack.h  ScreenAnimationStatus.h  ScreenStatus.h
include/ui_next/: AboutBox.h  AttachmentControl.h  BodyControl.h  CameraControl.h  CloseSignallingWidget.h  CodeEdit.h  ControlPanel.h  EntityControl.h  EntityStatus.h  ExtraControl.h  FaceTrackControl.h  GLInfoDisplay.h  GLWindow.h  HelpBox.h  LicensePresenter.h  ScreenAnimationControl.h  SearchDialog.h  ShaderEdit.h  ShaderHighlighter.h  SoundControl.h
include/util/: Channel.h  CircularBuffer.h  Constants.h  Derive.h  DynLoad.h  FileUtil.h  IniLoader.h  Logger.h  Sinkrate.h  Wife.h
include/wgc0310/: AttachmentStatus.h  BodyAnim.h  BodyStatus.h  Components.h  Head.h  HeadStatus.h  Mesh.h  Screen.h  ScreenAnimation.h  ScreenAnimationStatus.h  ScreenCurveHelper.h  ScreenGlass.h  Shader.h
include/wgc0310/api/: Attachment.h  ScreenAnimation.h  WGAPI.h
include/wgc0310/head/: Head.h  HeadFrame.h  Intake.h  Screen.h  (+2 more)
model/: abdomen.mesh  big-arm-cover.low-poly.mesh  big-arm-cover.mesh  monitor.mesh  shoulder-plate.mesh  small-arm-cover.low-poly.mesh  small-arm-cover.mesh  waist.mesh
model/line-mesh/: big-arm-connector.mesh  chest-box.mesh  monitor.mesh  waist.mesh
model/stroke/: abdomen.mesh  big-arm.mesh  claw.mesh  shoulder.mesh  small-arm.mesh
patch/: README.txt
patch/model/: TestObject2.mtl
resc/: 3RD_PARTIES  AGPL-BRIEF  CC-BY-NC-SA-BRIEF  CC-BY-SA-BRIEF  LICENSE-CC-BY-NC-SA  PREAMBLE  head.mesh  icon-only.qrc  main.qrc  phong-tester.qrc
resc/bis/: interp.bis
resc/help/: error.html  index.css  index.html
resc/model/: TestObject.mtl  abdomen.mesh  ber-shell.mesh  ber.mesh  big-arm-connector.mesh  big-arm-cover.mesh  big-arm.mesh  chest-box.mesh  chest-plate.mesh  claw-cover.mesh  claw.mesh  monitor-intake.mesh  monitor.mesh  power-pin.mesh  power.mesh  radar.mesh  shoulder-connector.mesh  small-arm.mesh  waist.mesh  wheel-small.mesh  wheel.mesh
resc/win32/: CWGLX.rc  CWUtil.rc  Cement.rc  Main.rc  PhongTester.rc
rw-protocol/: Cargo.toml  build.rs
rw-protocol/src/: lib.rs  protocol.proto  request.proto  state.proto
rw-render/: Cargo.toml
rw-render/src/: error.rs  lib.rs  triangle.rs
rw-renderer/: Cargo.toml
rw-window/: Cargo.toml
rw-window/src/: config.rs  main.rs  msgbox.rs  opt.rs
rw-window/src/command/: log.rs  mod.rs  vk.rs
rw-window/src/win32/: combo_box.rs  mod.rs  msg_box.rs
src/: GlobalConfig.cc
src/cement/: Cement.cc
src/cwglx/: Color.cc  Drawable.cc  DrawableArena.cc  GLInfo.cc  Light.cc  Material.cc  MeshLoader.cc  RawMatrix.cc  Setup.cc  Texture.cc  Vertex.cc
src/glu/: FakeGLU.cc
src/pl2/: pl2q.cc
src/pose/: DlibPoser.cc
src/ui/: Animation.cc  CameraEntityStatus.cc  CaptureWidget.cc  ConfigWidget.cc  ConfigWidget.ui  ConfigWidgetBody.cc  ConfigWidgetCamera.cc  ConfigWidgetCapture.cc  ConfigWidgetFakeCapture.cc  FaceTrackStatus.cc  GLWidget.cc  GLWidgetX.cc  ManualOperateWidget.cc  MessageBoxAlter.cc  MessageBoxAlter.ui  OSFTrack.cc  ScreenAnimationStatus.cc  ScreenStatus.cc
src/ui_next/: AboutBox.cc  AttachmentControl.cc  BodyControl.cc  CameraControl.cc  CodeEdit.cc  ControlPanel.cc  EntityControl.cc  EntityStatus.cc  ExtraControl.cc  GLInfoDisplay.cc  GLWindow.cc  HelpBox.cc  LicensePresenter.cc  ScreenAnimationControl.cc  SearchDialog.cc  ShaderEdit.cc  ShaderHighlighter.cc  SoundControl.cc
src/util/: Constants.cc  DynLoad.cc  FileUtil.cc  IniLoader.cc  Sinkrate.cc
src/wgc0310/: BodyAnim.cc  BodyStatus.cc  Head.cc  Mesh.cc  Screen.cc  ScreenAnimationStatus.cc  ScreenCurveHelper.cc  ScreenGlass.cc  Shader.cc
(+65 files in other folders)
