[package]
name = "rw-window"
version = "0.1.0"
edition = "2021"

[dependencies]
rw-render = { path = "../rw-render" }
rw-protocol = { path = "../rw-protocol" }

once_cell = "1"
serde = { version = "1", features=["derive"] }
structopt = "0.3"
toml = "0.7"
tokio = { version = "1.27.0", features=["sync", "rt"] }
tokio-tungstenite = "0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
vulkano = "0.33"
vulkano-win = "0.33"
winit = "0.28.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features=[
    "commctrl",
    "minwindef",
    "windef",
    "wingdi",
    "winuser",
    "std"
] }
